[package]
name = "nom-regex"
version = "0.2.0"
edition = "2018"
description = "regular expressions for nom parsers"
license = "MIT"
keywords = ["parser", "parser-combinators", "regex"]
categories = ["parsing"]
repository = "https://github.com/rust-bakery/nom-regex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"

[dependencies.nom]
version = "7.0.0"
default-features = false

[features]
alloc = ["nom/alloc"]
default = ["alloc"]
